--- a/frontend/src/blocks/element/__button/element__button.css
+++ b/frontend/src/blocks/element/__button/element__button.css
@@ -1,5 +1,5 @@
 .element__button {
-    background-image: url('../../../images/Vectorlike.svg');
+    background-image: url('../../../../images/Vectorlike.svg');
     background-repeat: no-repeat;
     border: none;
     background-color: transparent;
@@ -11,6 +11,7 @@
     bottom: 10px;
     position: absolute;
 }
+
 
 .element__button:hover {
     opacity: 0.5;
